# spatialdata_xenium_explorer

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
10x_tutorials/visium/: Selection_1_cells_stats.csv  visium_tuto.ipynb
10x_tutorials/xenium/: Selection_1_cells_stats.csv  Selection_2_cells_stats.csv  Xeniumranger_V1_hSkin_Melanoma_Add_on_FFPE_he_imagealignment.csv  alignment_matrix.csv
api/: index.html
cite_us/: index.html
cli/: index.html
docs/: README.md  api.md  cite_us.md  cli.md  getting_started.md  index.md
docs/10x_tutorials/: Selection_1_coordinates.csv  visium_tuto.ipynb  xenium_tuto.ipynb
docs/10x_tutorials/visium/: Selection_1_coordinates.csv  visium_tuto.ipynb
docs/10x_tutorials/xenium/: Selection_1_coordinates.csv  xenium_tuto.ipynb
getting_started/: index.html
search/: search_index.json
spatialdata_xenium_explorer/: __init__.py  _constants.py  constants.py  converter.py  images.py  points.py  shapes.py  table.py  utils.py
spatialdata_xenium_explorer/cli/: app.py
spatialdata_xenium_explorer/core/: images.py  points.py  shapes.py  table.py
tests/: test_instance.py
