[tool.poetry]
name = "spatialdata_xenium_explorer"
version = "0.0.1"
description = "Converting any SpatialData object into files that can be open by the Xenium Explorer"
authors = ["Quentin Blampey <quentin.blampey@gmail.com>"]
packages = [{ include = "spatialdata_xenium_explorer" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
botocore = "^1.31.47"
spatialdata = "^0.0.12"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
ipykernel = "^6.25.2"
mkdocs-material = "^9.3.2"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/__init__.py"]
