[tool.poetry]
name = "spatialdata_xenium_explorer"
version = "0.1.5"
description = "Converting any SpatialData object into files that can be open by the Xenium Explorer"
documentation = "https://quentinblampey.github.io/spatialdata_xenium_explorer/"
homepage = "https://quentinblampey.github.io/spatialdata_xenium_explorer/"
repository = "https://github.com/quentinblampey/spatialdata_xenium_explorer"
authors = ["Quentin Blampey <quentin.blampey@gmail.com>"]
packages = [{ include = "spatialdata_xenium_explorer" }]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.scripts]
spatialdata_xenium_explorer = "spatialdata_xenium_explorer.main:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
botocore = "^1.31.47"
spatialdata = "^0.0.15"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
ipykernel = "^6.25.2"
mkdocs-material = "^9.3.2"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"
jupyter-black = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
skip_glob = ["*/__init__.py"]
